nosetsid not supported anymore. SIGHUP now properly closes
stdin/stdout to allow the service to naturally exit on EOF;
SIGQUIT semantics changed to immediately bail. SIGINT is now
trapped and forwarded to the service's process group.
 - New binary: s6-svperms, implementing a split permissions
model. (By default, everything is the same as before.)


In 2.9.2.0
----------

 - Bugfixes.
 - New -d option to s6-sudod.


In 2.9.1.0
----------

 - Bugfixes.
 - execline support is now optional. Some functionality is not available
when execline support is disabled.
 - New '?' directive to s6-log, to spawn a processor with /bin/sh.
 - New console holder functionality for easier s6-svscan-log support.
 - On systems that define SIGPWR and SIGWINCH, s6-svscan -s now calls
a user handler for those signals.


In 2.9.0.1
----------

 - Bugfixes.


In 2.9.0.0
----------

 - Bugfixes.
 - Adaptation to skalibs-2.9.0.0.
 - The s6-fdholder-*c programs have been removed. They were unused: the
separation between (for instance) s6-fdholder-store and s6-fdholder-storec
added more complexity and more code than it brought benefits. The s6
package is now 7 binaries leaner.


In 2.8.0.1
----------

 - Bugfixes.


In 2.8.0.0
----------

 - Bugfixes.
 - Adaptation to skalibs-2.8.0.0.
 - s6-log can now notify readiness with the new -d option.
 - s6-log now has a default line limit of 8 kB.
 - In the accessrules library, checking against uidgid now checks the
uid/self key if the client and the server have the same uid, and the
gid/self key if the client and the server have the same gid. That means
s6-ipcserver-access can now be configured to allow/deny/specialcase
connections where the client's credentials are the same as the server's.
 - Everything builds as PIC by default.


In 2.7.2.2
----------

 - Bugfixes.


In 2.7.2.1
----------

 - Bugfixes.


In 2.7.2.0
----------

 - s6-ipcserver-socketbinder now takes a -B option to make the socket blocking.