@@ -261,6 +261,12 @@ synchronization</a>.
 <li><a href="ucspilogd.html">The <tt>ucspilogd</tt> program</a></li>
 </ul>
 
+<h4> Management of user supervision trees </h4>
+
+<ul>
+<li><a href="s6-usertree-maker.html">The <tt>s6-usertree-maker</tt> program</a></li>
+</ul>
+
 <h4> Timed lock acquisition </h4>
 
 <ul>
