@@ -41,6 +41,8 @@ directories. <a href="s6-supervise.html">s6-supervise</a> now always starts
 it child as a session leader. </li>
  <li> Split permissions on service control are now officially supported.
 New binary: <a href="s6-svperms.html">s6-svperms</a>. </li>
+ <li> New program that creates service directories to run a supervision tree
+managed by a user: <a href="s6-usertree-maker.html">s6-usertree-maker</a>. </li>
 </ul>
 
 <h2> in 2.9.2.0 </h2>
